Jann 30/objects/ProfitCenterUserRole__c.object
<CustomObject>
    <description>RFA R1 - Stores the Profit Center Associated Location Coordinators and Viewers (Hierarchy) within the RFA Application.</description>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <controllingField>UserType__c</controllingField>
            <picklistValues>
                <fullName>1. Key Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Senior Executive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProfitCenter__c</fullName>
        <label>Profit Center</label>
        <referenceTo>ProfitCenter__c</referenceTo>
        <relationshipLabel>Profit Center User Roles</relationshipLabel>
        <relationshipName>Profit_Center_Associated_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Profit_Center_Associated_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Location Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viewer - All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viewer - Capital Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Profit Center User Role</label>
    <nameField>
        <displayFormat>Users-{00000000}</displayFormat>
        <label>Profit Center User Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profit Center User Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PUR_VR01_LevelReqforLocationCoordinator</fullName>
        <active>true</active>
        <description>RFA R1 - Restrict User from saving a Location Coordinator to a Profit Center without assigned a level.</description>
        <errorConditionFormula>ISPICKVAL( UserType__c , &quot;Location Coordinator&quot;) &amp;&amp;  ISPICKVAL( Level__c, &quot;&quot; )</errorConditionFormula>
        <errorDisplayField>Level__c</errorDisplayField>
        <errorMessage>Level must be populated for Location Coordinator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Level_for_Policy_Profit_Center</fullName>
        <active>false</active>
        <description>Policy profit center will only allow Group and Corporate values for level.</description>
        <errorConditionFormula>AND( ProfitCenter__r.Id == $Label.RFA_CL148, TEXT(Level__c) != &apos;3. Group&apos;, TEXT(Level__c) != &apos;4. Corporate&apos;)</errorConditionFormula>
        <errorMessage>Only Group or Corporate level value is allowed for this Policy Profit Center.</errorMessage>
    </validationRules>
</CustomObject>